...
                    android:textSize="25sp">

                </TextView>

                <!-- Placeholder for 'Sorting List Option' Spinner -->
                <Spinner
                    android:id="@+id/sortingListOption"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingHorizontal="10dp"
                    android:layout_gravity="center">
                </Spinner>

            </LinearLayout>

        </LinearLayout>

        <!-- Placeholder for 'Flight List' ListView -->
        <ListView
            android:id="@+id/flightListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="#D1D1D1"
            android:visibility="visible"/>
...
