...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/midCodeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="YUR"
                    android:textSize="25sp"
                    android:gravity="center_horizontal">
                </TextView>
...
                        android:textSize="45sp"
                        android:textColor="@color/white">

                    </TextView>

                    <Button
                        android:id="@+id/econPriceBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="#BDB628"
                        android:text="Book"
...
